k8s/sqf-sys/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-horizon
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.cors-header: >
      {"type": "returnFixedResponse", "returnFixedResponseConfig": {"contentType": "text/plain", "statusCode": "200", "messageBody": "CORS header set"}, "conditions": [{"field": "http-header", "httpHeaderConfig": {"httpHeaderName": "Access-Control-Request-Method"}}]}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:270075630987:certificate/e191f120-11b4-4fc4-af55-3b6b61bf5e8d

    ## Redirect HTTP to HTTPS
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: redirect-to-https
                port:
                  name: use-annotation
    - http:
        paths:
          - path: /customer-relationship-management/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: customer-relationship-management-cluster-ip-service
                port:
                  number: 3000
          - path: /document-management/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: document-management-cluster-ip-service
                port:
                  number: 3000
          - path: /notification/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-cluster-ip-service
                port:
                  number: 3000
          - path: /risk-operation/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: risk-operation-cluster-ip-service
                port:
                  number: 3000
          - path: /trade-directory/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: trade-directory-cluster-ip-service
                port:
                  number: 3000
